# voiture2A-ros

./: README.md
src/gpsd_client/: CMakeLists.txt  README.md  package.xml
src/gpsd_client/include/gpsd_client/: gpsd_node.h
src/gpsd_client/msg/: GpsFix.msg
src/gpsd_client/src/: gpsd_node.cpp
src/icm20948_driver/: CMakeLists.txt  package.xml
src/icm20948_driver/Fusion/: CMakeLists.txt
src/icm20948_driver/config/: magnetic_calibration.yaml
src/icm20948_driver/include/icm20948_driver/: fusion_analysis.h  fusion_converter.h  icm20948.h  icm20948_node.h  icm20948_register.h  test_fusion.h
src/icm20948_driver/include/icm20948_driver/magnetic_calibration/: magnetic_calibration.h  magnetic_paving.h
src/icm20948_driver/msg/: DebugFusion.msg  RPY.msg  RawData.msg
src/icm20948_driver/src/: fusion_analysis.cpp  icm20948.cpp  icm20948_node.cpp  test_fusion.cpp
src/icm20948_driver/src/magnetic_calibration/: magnetic_calibration.cpp  magnetic_paving.cpp
src/voiture2a_motors_driver/: CMakeLists.txt  README.md  package.xml
src/voiture2a_motors_driver/include/voiture2a_motors_driver/: motors.h  motors_node.h
src/voiture2a_motors_driver/msg/: Engine.msg  MotorsState.msg
src/voiture2a_motors_driver/src/: motors.cpp  motors_node.cpp
